# drivers

./: CMakeLists.txt
TARGET_DISCO_F469NI/BSP/STM32469I-Discovery/: stm32469i_discovery.c  stm32469i_discovery.h  stm32469i_discovery_lcd.c  stm32469i_discovery_lcd.h  stm32469i_discovery_sdram.c
TARGET_DISCO_F746NG/: CMakeLists.txt
TARGET_DISCO_F746NG/BSP/STM32F746G-Discovery/: stm32746g_discovery_lcd.c
TARGET_DISCO_F769NI/: CMakeLists.txt
TARGET_DISCO_F769NI/BSP/Components/nt35510/: nt35510.c
TARGET_DISCO_F769NI/BSP/STM32F769I-Discovery/: stm32f769i_discovery_audio.c  stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h
TARGET_DISCO_F769NI/TS_DISCO_F769NI/: TS_DISCO_F769NI.cpp
